This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

18-Jan-2002 (Lars Duening)  (3.3.360)
  - (ptmalloc) Gawain provided a bugfix and more work towards GC
       support (yes, my previous enthusiasm was premature).

17-Jan-2002 (Lars Duening)  (3.3.359)
  - (prolang.h) Corrected a compilation problem when using ptmalloc.

17-Jan-2002 (Lars Duening)  (3.3.358)
  - (ptmalloc) Gawain added GC support to ptmalloc - yay!
  - (configure) New with-malloc setting 'default' selects either smalloc
       or ptmalloc depending on the support and selection of PThreads.

16-Jan-2002 (Lars Duening)  (3.3.357)
  - (interpret.c) The 'indexing one past' for strings didn't work
       with the empty string (reported by Zonk).
  - (prolang.y) When redefining a function, the redefinition can now
       have more arguments than the original.
  - (lex.c) Escaping newlines in #if conditions on Windows didn't
       work (reported by Zonk)

11-Jan-2002 (Lars Duening)  (3.3.356)
  - (efuns.c) to_string(struct) didn't print the name of the struct,
       and leaked memory (reported by Zonk).
  - (object.c, prolang.y) Corrected another refcount error in struct
       type instances (reported by Zonk).

08-Jan-2002 (Lars Duening)  (3.3.355)
  - (lex, prolang.y, simul_efun.c) Exported the initialisation of a global
       identifier into a single function, to collect all the values in
       one place.

07-Jan-2002 (Lars Duening)  (3.3.354)
  - (several files) Removed the 'no-blueprint' configuration option: there
       code is stable.

07-Jan-2003 (Lars Duening)  (3.3.353)
  - (prolang.y) Corrected another error in non-__INIT initializations
       (thanks, Guandalug).
  - (prolang.y) Corrected another refcount error in the struct code
       (reported by Bardioc).

06-Jan-2003 (Lars Duening)  (3.3.352)
  - (prolang.y) Removed compiler warnings.