@@ -31,6 +31,11 @@ DESCRIPTION
         lfuns of the object. This poses no problem as long as these references
         are never executed after they became invalid.
 
+BUGS
+        If the replacement program contains virtually inherited variables,
+        it must be the first inherited program. Without this restriction,
+        the wrong variables would survive the replacement process.
+
 HISTORY
         LDMud 3.2.9 allowed to omit the argument if only one inherit
         exists.
